--- a/conf/influxdb.conf
+++ b/conf/influxdb.conf
@@ -1,7 +1,7 @@
 reporting-disabled = false
 
 [meta]
-  dir = "/data/influx/meta"
+  dir = "/var/lib/influxdb/meta"
   hostname = "localhost"
   bind-address = ":8088"
   retention-autocreate = true
@@ -14,12 +14,12 @@ reporting-disabled = false
   logging-enabled = true
 
 [data]
-  dir = "/data/influx/data"
+  dir = "/var/lib/influxdb/data"
   engine = "bz1"
   max-wal-size = 104857600
   wal-flush-interval = "10m0s"
   wal-partition-flush-delay = "2s"
-  wal-dir = "/data/influx/wal"
+  wal-dir = "/var/lib/influxdb/wal"
   wal-logging-enabled = true
   wal-ready-series-size = 30720
   wal-compaction-threshold = 0.5
@@ -74,7 +74,7 @@ reporting-disabled = false
   https-certificate = "/etc/ssl/influxdb.pem"
 
 [collectd]
-  enabled = false
+  enabled = true
   bind-address = ":25826"
   database = "collectd"
   retention-policy = ""
