--- a/conf/telegraf.conf
+++ b/conf/telegraf.conf
@@ -93,6 +93,8 @@
   # Connection timeout (for the connection with InfluxDB), formatted as a string.
   # If not provided, will default to 0 (no timeout)
   # timeout = "5s"
+  username = "sunny"
+  password = "sunny_admin"
   # username = "telegraf"
   # password = "metricsmetricsmetricsmetrics"
   # Set the user agent for HTTP POSTs (can be useful for log differentiation)
